--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(model.diversity)
 importFrom(glmulti,glmulti)
 importFrom(glmulti,weightable)
 importFrom(unmarked,occuRN)
+importFrom(unmarked,unmarkedFrameOccu)
 importFrom(vegan,diversity)
+importMethodsFrom(unmarked,predict)
