--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,16 @@
 
 export(diversityoccu)
 export(model.diversity)
+export(response.plot)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
 importFrom(glmulti,glmulti)
 importFrom(glmulti,weightable)
 importFrom(unmarked,occuRN)
