--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(diversityoccu)
 export(model.diversity)
 export(response.plot)
+importFrom(MuMIn,dredge)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
