--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(diversityoccu)
 export(model.diversity)
 export(response.plot)
 importFrom(MuMIn,dredge)
+importFrom(MuMIn,get.models)
+importFrom(dplyr,filter)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -15,6 +17,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(glmulti,glmulti)
 importFrom(glmulti,weightable)
+importFrom(qpcR,akaike.weights)
 importFrom(unmarked,occuRN)
 importFrom(unmarked,unmarkedFrameOccu)
 importFrom(vegan,diversity)
