--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ importFrom(ggplot2,theme_bw)
 importFrom(glmulti,glmulti)
 importFrom(glmulti,weightable)
 importFrom(qpcR,akaike.weights)
+importFrom(raster,stack)
+importFrom(raster,writeRaster)
 importFrom(unmarked,occu)
 importFrom(unmarked,occuRN)
 importFrom(unmarked,unmarkedFrameOccu)
