--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(batchoccu)
 export(diversityoccu)
 export(model.diversity)
+export(predict.diversity)
 export(response.plot)
 importFrom(MuMIn,AICc)
 importFrom(MuMIn,dredge)
@@ -20,7 +21,12 @@ importFrom(ggplot2,theme_bw)
 importFrom(glmulti,glmulti)
 importFrom(glmulti,weightable)
 importFrom(qpcR,akaike.weights)
+importFrom(raster,KML)
+importFrom(raster,addLayer)
+importFrom(raster,quantile)
 importFrom(raster,stack)
+importFrom(raster,subset)
+importFrom(raster,unstack)
 importFrom(raster,writeRaster)
 importFrom(unmarked,occu)
 importFrom(unmarked,occuRN)
