--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ S3method(plot,modeldiversity)
 S3method(summary,diversityoccupancy)
 S3method(summary,modeldiversity)
 export(batchoccu)
+export(diversity.predict)
 export(diversityoccu)
 export(model.diversity)
-export(predict.diversity)
 importFrom(MuMIn,AICc)
 importFrom(MuMIn,dredge)
 importFrom(MuMIn,get.models)
@@ -29,6 +29,7 @@ importFrom(qpcR,akaike.weights)
 importFrom(raster,KML)
 importFrom(raster,addLayer)
 importFrom(raster,quantile)
+importFrom(raster,reclassify)
 importFrom(raster,stack)
 importFrom(raster,subset)
 importFrom(raster,unstack)
