--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(batchoccu)
 export(diversity.predict)
 export(diversityoccu)
 export(model.diversity)
+export(summary)
 importFrom(MuMIn,AICc)
 importFrom(MuMIn,dredge)
 importFrom(MuMIn,get.models)
