<mayor bug fix>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,ylim)
 importFrom(glmulti,glmulti)
 importFrom(glmulti,weightable)
+importFrom(graphics,plot)
 importFrom(qpcR,akaike.weights)
 importFrom(raster,KML)
 importFrom(raster,addLayer)
@@ -32,6 +33,8 @@ importFrom(raster,stack)
 importFrom(raster,subset)
 importFrom(raster,unstack)
 importFrom(raster,writeRaster)
+importFrom(stats,as.formula)
+importFrom(stats,glm)
 importFrom(unmarked,occu)
 importFrom(unmarked,occuRN)
 importFrom(unmarked,unmarkedFrameOccu)
