--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DiversityOccupancy
 Type: Package
-Title: Building Diversity Models from Multiple Species Presence Data from Occupancy Models
-Version: 1.0.0
-Date: 2016-01-07
-Authors@R: person("Derek", "Corcoran", email = "derek.corcoran.barrios@gmail.com",
-  role = c("aut", "cre"))
-Description: Predictions of alpha diversity are fitted from presence data, first abundance is modeled from occupancy models and then, several diversity indices are calculated and finally GLM models are used to predict diversity in different environments and select prioriy areas.
+Title: Building Diversity Models from Multiple Species Occupancy Models
+Version: 1.0.1
+Date: 2016-03-09
+Authors@R: c(person("Derek", "Corcoran", email = "derek.corcoran.barrios@gmail.com",
+  role = c("aut", "cre")), person("Dylan", "Kesler",  role = c("aut")), person("Elisabeth", "Webb",  role = c("aut")),  person("Nicole" ,"Michel",  role = c("aut")))
+Description: Predictions of alpha diversity are fitted from presence data, first abundance is modeled from occupancy models and then, several diversity indices are calculated and finally GLM models are used to predict diversity in different environments and select priority areas.
 Depends:
     R (>= 3.2.2),
     MuMIn,
