--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(graphics,plot)
 importFrom(qpcR,akaike.weights)
 importFrom(raster,KML)
 importFrom(raster,addLayer)
+importFrom(raster,plot)
 importFrom(raster,quantile)
 importFrom(raster,reclassify)
 importFrom(raster,stack)
@@ -40,5 +41,4 @@ importFrom(unmarked,occu)
 importFrom(unmarked,occuRN)
 importFrom(unmarked,unmarkedFrameOccu)
 importFrom(vegan,diversity)
-importMethodsFrom(raster,plot)
 importMethodsFrom(unmarked,predict)
