--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(raster,subset)
 importFrom(raster,unstack)
 importFrom(raster,writeRaster)
 importFrom(stats,as.formula)
+importFrom(stats,getCall)
 importFrom(stats,glm)
 importFrom(unmarked,occu)
 importFrom(unmarked,occuRN)
