--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: DiversityOccupancy
 Type: Package
 Title: Building Diversity Models from Multiple Species Occupancy Models
 Version: 1.0.6
-Date: 2016-07-05
+Date: 2017-03-02
 Authors@R: c(person("Derek", "Corcoran", email = "derek.corcoran.barrios@gmail.com",
-  role = c("aut", "cre")), person("Dylan", "Kesler",  role = c("aut")), person("Nicole" ,"Michel",  role = c("ctb")), person("Mike", "Meredith",  role = c("ctb")))
+  role = c("aut", "cre")), person("Dylan", "Kesler",  role = c("aut")), person("Lisa", "Webb",  role = c("aut")), person("Giorgia", "Graells",  role = c("aut")), person("Nicole" ,"Michel",  role = c("ctb")), person("Mike", "Meredith",  role = c("ctb")))
 Description: Predictions of alpha diversity are fitted from presence data, first abundance is modeled from occupancy models and then, several diversity indices are calculated and finally GLM models are used to predict diversity in different environments and select priority areas.
 Depends:
     R (>= 3.2.2),
@@ -23,5 +23,5 @@ Suggests:
     rmarkdown,
 License: GPL-3
 LazyData: TRUE
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 VignetteBuilder: knitr
