--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(responseplot.occu)
 importFrom(MuMIn,AICc)
 importFrom(MuMIn,dredge)
 importFrom(MuMIn,model.avg)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
@@ -23,10 +24,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,ylim)
-importFrom(glmulti,glmulti)
-importFrom(glmulti,weightable)
 importFrom(graphics,plot)
-importFrom(qpcR,akaike.weights)
 importFrom(raster,KML)
 importFrom(raster,addLayer)
 importFrom(raster,plot)
