--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,18 +13,32 @@ importFrom(MuMIn,AICc)
 importFrom(MuMIn,dredge)
 importFrom(MuMIn,model.avg)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
+importFrom(dplyr,one_of)
+importFrom(dplyr,pull)
+importFrom(dplyr,quo)
+importFrom(dplyr,select)
+importFrom(dplyr,select_if)
+importFrom(dplyr,summarize_all)
+importFrom(dplyr,syms)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
+importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,sym)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,ylab)
 importFrom(ggplot2,ylim)
 importFrom(graphics,plot)
+importFrom(purrr,map)
 importFrom(raster,KML)
 importFrom(raster,addLayer)
 importFrom(raster,plot)
@@ -34,9 +48,15 @@ importFrom(raster,stack)
 importFrom(raster,subset)
 importFrom(raster,unstack)
 importFrom(raster,writeRaster)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(stats,as.formula)
 importFrom(stats,getCall)
 importFrom(stats,glm)
+importFrom(stringr,str_count)
+importFrom(stringr,str_remove_all)
+importFrom(stringr,str_split)
+importFrom(stringr,str_trim)
 importFrom(unmarked,occu)
 importFrom(unmarked,occuRN)
 importFrom(unmarked,unmarkedFrameOccu)
